assets/framework/nwt-cron-prev/language/nwt-cron-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root) {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Language: peg$parseLanguage },
        peg$startRuleFunction  = peg$parseLanguage,

        peg$c0 = function(s) { return s.filter(sub => (typeof sub !== "undefined") && (sub !== null)) },
        peg$c1 = function(s) { return s },
        peg$c2 = function(selector, complement) { return { selector, ...complement||{}} },
        peg$c3 = peg$otherExpectation("{...}"),
        peg$c4 = "{",
        peg$c5 = peg$literalExpectation("{", false),
        peg$c6 = "}",
        peg$c7 = peg$literalExpectation("}", false),
        peg$c8 = function(token1, block, token2) { return { subselector: block } },
        peg$c9 = peg$otherExpectation("{action}"),
        peg$c10 = function(t) { return {action:t} },
        peg$c11 = "<<",
        peg$c12 = peg$literalExpectation("<<", false),
        peg$c13 = ">>",
        peg$c14 = peg$literalExpectation(">>", false),
        peg$c15 = function(t) { return t },
        peg$c16 = peg$anyExpectation(),
        peg$c17 = function() { return text() },
        peg$c18 = "=",
        peg$c19 = peg$literalExpectation("=", false),
        peg$c20 = function(t) { return t; },
        peg$c21 = function(it_1, it_n) { return [it_1].concat(it_n) },
        peg$c22 = ",",
        peg$c23 = peg$literalExpectation(",", false),
        peg$c24 = function(a, token1, b) { return {type:"range",from:a,to:b} },
        peg$c25 = " ",
        peg$c26 = peg$literalExpectation(" ", false),
        peg$c27 = function(c, w) { return {...c,...w} },
        peg$c28 = function(w) { return CronFactory.calendarable({ weekday: w }) },
        peg$c29 = function(d, w) { return CronFactory.calendarable({...d,...w}); },
        peg$c30 = function(d, h) { return CronFactory.calendarable({...d,hour:h}); },
        peg$c31 = function(d) { return CronFactory.calendarable(d); },
        peg$c32 = function(day, weekday) { return CronFactory.calendarable(weekday ? {weekday,day} : {day}) },
        peg$c33 = function(it) { return CronFactory.calendarable({ ambiguous: it }) },
        peg$c34 = function(w) { return w },
        peg$c35 = function(year, month, day) { return CronFactory.calendarable({year, month, day})},
        peg$c36 = function(month, day) { return CronFactory.calendarable({month, day})},
        peg$c37 = function(hour, minute, second) { return CronFactory.watchable({hour, minute, second})},
        peg$c38 = peg$otherExpectation("/{month}"),
        peg$c39 = "/",
        peg$c40 = peg$literalExpectation("/", false),
        peg$c41 = function(m) { return m },
        peg$c42 = peg$otherExpectation("/{day}"),
        peg$c43 = function(d) { return d },
        peg$c44 = peg$otherExpectation(":{minute}"),
        peg$c45 = ":",
        peg$c46 = peg$literalExpectation(":", false),
        peg$c47 = peg$otherExpectation(":{second}"),
        peg$c48 = peg$otherExpectation("{year}"),
        peg$c49 = peg$otherExpectation("{month}"),
        peg$c50 = peg$otherExpectation("{day}"),
        peg$c51 = peg$otherExpectation("{hour}"),
        peg$c52 = peg$otherExpectation("{minute}"),
        peg$c53 = peg$otherExpectation("{second}"),
        peg$c54 = "*",
        peg$c55 = peg$literalExpectation("*", false),
        peg$c56 = "enero",
        peg$c57 = peg$literalExpectation("enero", false),
        peg$c58 = function() { return 0 },
        peg$c59 = "febrero",
        peg$c60 = peg$literalExpectation("febrero", false),
        peg$c61 = function() { return 1 },
        peg$c62 = "marzo",
        peg$c63 = peg$literalExpectation("marzo", false),
        peg$c64 = function() { return 2 },
        peg$c65 = "abril",
        peg$c66 = peg$literalExpectation("abril", false),
        peg$c67 = function() { return 3 },
        peg$c68 = "mayo",
        peg$c69 = peg$literalExpectation("mayo", false),
        peg$c70 = function() { return 4 },
        peg$c71 = "junio",
        peg$c72 = peg$literalExpectation("junio", false),
        peg$c73 = function() { return 5 },
        peg$c74 = "julio",
        peg$c75 = peg$literalExpectation("julio", false),
        peg$c76 = function() { return 6 },
        peg$c77 = "agosto",
        peg$c78 = peg$literalExpectation("agosto", false),
        peg$c79 = function() { return 7 },
        peg$c80 = "septiembre",
        peg$c81 = peg$literalExpectation("septiembre", false),
        peg$c82 = function() { return 8 },
        peg$c83 = "octubre",
        peg$c84 = peg$literalExpectation("octubre", false),
        peg$c85 = function() { return 9 },
        peg$c86 = "noviembre",
        peg$c87 = peg$literalExpectation("noviembre", false),
        peg$c88 = function() { return 10 },
        peg$c89 = "diciembre",
        peg$c90 = peg$literalExpectation("diciembre", false),
        peg$c91 = function() { return 11 },
        peg$c92 = peg$otherExpectation("{weekday}"),
        peg$c93 = "lunes",
        peg$c94 = peg$literalExpectation("lunes", false),
        peg$c95 = "martes",
        peg$c96 = peg$literalExpectation("martes", false),
        peg$c97 = "mi\xE9rcoles",
        peg$c98 = peg$literalExpectation("mi\xE9rcoles", false),
        peg$c99 = "miercoles",
        peg$c100 = peg$literalExpectation("miercoles", false),
        peg$c101 = "jueves",
        peg$c102 = peg$literalExpectation("jueves", false),
        peg$c103 = "viernes",
        peg$c104 = peg$literalExpectation("viernes", false),
        peg$c105 = "s\xE1bado",
        peg$c106 = peg$literalExpectation("s\xE1bado", false),
        peg$c107 = "sabado",
        peg$c108 = peg$literalExpectation("sabado", false),
        peg$c109 = "domingo",
        peg$c110 = peg$literalExpectation("domingo", false),
        peg$c111 = /^[0-9]/,
        peg$c112 = peg$classExpectation([["0", "9"]], false, false),
        peg$c113 = function() { return parseInt(text()) },
        peg$c114 = function(n) { return n-1 },
        peg$c115 = peg$otherExpectation("{Comment sentence}"),
        peg$c116 = function() { return undefined },
        peg$c117 = "//",
        peg$c118 = peg$literalExpectation("//", false),
        peg$c119 = function() { return null },
        peg$c120 = "/*",
        peg$c121 = peg$literalExpectation("/*", false),
        peg$c122 = "*/",
        peg$c123 = peg$literalExpectation("*/", false),
        peg$c124 = "-",
        peg$c125 = peg$literalExpectation("-", false),
        peg$c126 = peg$otherExpectation("{any space}"),
        peg$c127 = peg$otherExpectation("{tab or space}"),
        peg$c128 = "\t",
        peg$c129 = peg$literalExpectation("\t", false),
        peg$c130 = peg$otherExpectation("{end of line}"),
        peg$c131 = "\r\n",
        peg$c132 = peg$literalExpectation("\r\n", false),
        peg$c133 = "\r",
        peg$c134 = peg$literalExpectation("\r", false),
        peg$c135 = "\n",
        peg$c136 = peg$literalExpectation("\n", false),
        peg$c137 = peg$otherExpectation("{end of file}"),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseLanguage() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseFull_sentence();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseFull_sentence();
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parse_();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parse_();
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseFull_sentence() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseSentence();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseEOL();
          if (s3 === peg$FAILED) {
            s3 = peg$parseEOF();
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c1(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSentence() {
      var s0;

      s0 = peg$parseNesteable_time_structure_list();
      if (s0 === peg$FAILED) {
        s0 = peg$parseComment_sentence();
      }

      return s0;
    }

    function peg$parseNesteable_time_structure_list() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseTime_structure_list();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseTime_structure_continuation();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseTime_structure_continuation() {
      var s0;

      s0 = peg$parseTime_structure_wrapped();
      if (s0 === peg$FAILED) {
        s0 = peg$parseSignification();
      }

      return s0;
    }

    function peg$parseTime_structure_wrapped() {
      var s0, s1, s2, s3, s4, s5;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = [];
      s3 = peg$parse_();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parse_();
      }
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 123) {
          s3 = peg$c4;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c5); }
        }
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = peg$parse_();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parse_();
          }
          if (s4 !== peg$FAILED) {
            s2 = [s2, s3, s4];
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseLanguage();
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = [];
          s5 = peg$parse_();
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = peg$parse_();
          }
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 125) {
              s5 = peg$c6;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c7); }
            }
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c8(s1, s2, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }

      return s0;
    }

    function peg$parseSignification() {
      var s0, s1, s2;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseText_wrapped();
        if (s2 === peg$FAILED) {
          s2 = peg$parseRest_of_line();
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c10(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c9); }
      }

      return s0;
    }

    function peg$parseText_wrapped() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      if (input.substr(peg$currPos, 2) === peg$c11) {
        s1 = peg$c11;
        peg$currPos += 2;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c12); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseMultiline_text();
        if (s2 !== peg$FAILED) {
          if (input.substr(peg$currPos, 2) === peg$c13) {
            s3 = peg$c13;
            peg$currPos += 2;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c14); }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c15(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseMultiline_text() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$currPos;
      peg$silentFails++;
      if (input.substr(peg$currPos, 2) === peg$c13) {
        s4 = peg$c13;
        peg$currPos += 2;
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c14); }
      }
      peg$silentFails--;
      if (s4 === peg$FAILED) {
        s3 = void 0;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        if (input.length > peg$currPos) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c16); }
        }
        if (s4 !== peg$FAILED) {
          s3 = [s3, s4];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$currPos;
        peg$silentFails++;
        if (input.substr(peg$currPos, 2) === peg$c13) {
          s4 = peg$c13;
          peg$currPos += 2;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c14); }
        }
        peg$silentFails--;
        if (s4 === peg$FAILED) {
          s3 = void 0;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c16); }
          }
          if (s4 !== peg$FAILED) {
            s3 = [s3, s4];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c17();
      }
      s0 = s1;

      return s0;
    }

    function peg$parseRest_of_line() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 61) {
        s1 = peg$c18;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c19); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseOneline_text();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c20(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseOneline_text() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$currPos;
      s3 = peg$currPos;
      peg$silentFails++;
      s4 = peg$parseEOL();
      peg$silentFails--;
      if (s4 === peg$FAILED) {
        s3 = void 0;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        if (input.length > peg$currPos) {
          s4 = input.charAt(peg$currPos);
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c16); }
        }
        if (s4 !== peg$FAILED) {
          s3 = [s3, s4];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$currPos;
        s3 = peg$currPos;
        peg$silentFails++;
        s4 = peg$parseEOL();
        peg$silentFails--;
        if (s4 === peg$FAILED) {
          s3 = void 0;
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          if (input.length > peg$currPos) {
            s4 = input.charAt(peg$currPos);
            peg$currPos++;
          } else {
            s4 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c16); }
          }
          if (s4 !== peg$FAILED) {
            s3 = [s3, s4];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c17();
      }
      s0 = s1;

      return s0;
    }

    function peg$parseTime_structure_list() {
      var s0, s1, s2, s3;
